@@ -5,6 +5,16 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-May-16 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++eeschema:
+    Solved: bad update of toolbars (eeschema and libedit):
+        undo/redo buttons were not always updated after a change.
+
++kicad
+    the project tree now (as earlier) reads subdirs list files when starting
+    kicad. This feature can be disabled (see treeprj_frame.cpp)
+
 2008-May-15 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +eeschema:
